--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link rel="stylesheet" href="bootstrap-4.0/dist/css/bootstrap.min.css"> -->
+    <link rel="stylesheet" href="bootstrap-4.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="IcoMoon-Free/style.css">
     <link rel="stylesheet" href="css/style.css">
@@ -12,6 +12,76 @@
 
   <body>
     <svg class="sr-only">
+
+      <g id="car2_icon">
+        <path fill="#D2181B" d="M33.1,43.5h5.2v2.6h-5.2V43.5z"/>
+	<path fill="#D2181B" d="M77.2,39.6l-8.8-1.3c-1.6-1-3.3-1.9-5-2.6c-5.7-2.6-11.8-3.9-18-3.9h-1.5c-7.3,0-14.5,1.8-21,5.3l-4.4,2.4
+		c-5.2,0.1-10.3,1.4-14.8,4c-1.8,1-3,3-3,5.1v7.7c0,0.7,0.6,1.3,1.3,1.3h4.3c1.4,4,5.8,6.1,9.8,4.7c2.2-0.8,4-2.5,4.7-4.7h34.5
+		c1.4,4,5.8,6.1,9.8,4.7c2.2-0.8,4-2.5,4.7-4.7h0.5c0.2,0,0.3,0,0.5-0.1l4.2-1.7c1.9-0.7,3.1-2.6,3.1-4.6V40.9
+		C78.3,40.3,77.8,39.7,77.2,39.6z M18.8,56.2c-0.6,2.8-3.3,4.6-6.1,4c-2.8-0.6-4.6-3.3-4-6.1c0.6-2.8,3.3-4.6,6.1-4
+		c2.4,0.5,4.1,2.6,4.1,5.1C18.9,55.5,18.8,55.8,18.8,56.2z M42.1,55.1H21.5c0-4.3-3.5-7.8-7.7-7.8c-4.3,0-7.7,3.5-7.7,7.8H3.4v-6.4
+		c0-1.2,0.6-2.3,1.7-2.9c4.2-2.4,9-3.7,13.8-3.7h23.2V55.1z M42.1,39.6H23.9l0.2-0.1c5.5-3,11.7-4.7,17.9-5V39.6z M44.7,34.5h0.7
+		c5.2,0,10.4,1,15.2,2.9l-2.3,2.3H44.7V34.5z M67.9,56.2c-0.6,2.8-3.3,4.6-6.1,4c-2.8-0.6-4.6-3.3-4-6.1c0.6-2.8,3.3-4.6,6.1-4
+		c2.4,0.5,4.1,2.6,4.1,5.1C68,55.5,67.9,55.8,67.9,56.2z M75.7,43.5h-3.9v2.6h3.9v5.3c0,1-0.6,1.8-1.5,2.2L70.5,55
+		c0-0.1,0-0.2,0-0.4c0-0.1,0-0.3,0-0.4c0-0.1,0-0.3-0.1-0.4c0-0.1,0-0.3-0.1-0.4c0-0.1-0.1-0.3-0.1-0.4c0-0.1-0.1-0.2-0.1-0.4
+		c0-0.1-0.1-0.2-0.1-0.4c0-0.1-0.1-0.2-0.1-0.4c0-0.1-0.1-0.2-0.2-0.3c-0.1-0.1-0.1-0.2-0.2-0.3c-0.1-0.1-0.1-0.2-0.2-0.3
+		c-0.1-0.1-0.1-0.2-0.2-0.3c-0.1-0.1-0.1-0.2-0.2-0.3c-0.1-0.1-0.1-0.2-0.2-0.3c-0.1-0.1-0.2-0.2-0.2-0.3c-0.1-0.1-0.2-0.2-0.3-0.3
+		c-0.1-0.1-0.2-0.2-0.3-0.2c-0.1-0.1-0.2-0.2-0.3-0.3c-0.1-0.1-0.2-0.2-0.3-0.2c-0.1-0.1-0.2-0.2-0.3-0.2c-0.1-0.1-0.2-0.1-0.3-0.2
+		c-0.1-0.1-0.2-0.1-0.3-0.2c-0.1-0.1-0.2-0.1-0.4-0.2C66,48.1,65.9,48,65.8,48c-0.1,0-0.3-0.1-0.4-0.1c-0.1,0-0.2-0.1-0.3-0.1
+		c-0.1,0-0.3-0.1-0.4-0.1c-0.1,0-0.2-0.1-0.3-0.1c-0.2,0-0.3-0.1-0.5-0.1c-0.1,0-0.2,0-0.3,0c-0.3,0-0.5,0-0.8,0
+		c-4.3,0-7.7,3.5-7.8,7.7H44.7V42.2h14.2c0.3,0,0.7-0.1,0.9-0.4l3.3-3.3c1.4,0.7,2.8,1.4,4.1,2.2c0.2,0.1,0.3,0.2,0.5,0.2l7.9,1.1
+		V43.5z"/>
+          </g>
+
+      <g id="price_icon">
+      	<path fill="#D2181B" d="M46.1,24.1v2.3c0,3.9,3.2,7,7,7c3.9,0,7-3.2,7-7v-2.3c0.6,0,1.2-0.5,1.2-1.2c0-0.6-0.5-1.2-1.2-1.2h-2.3
+      		c-0.6,0-1.2,0.5-1.2,1.2c0,0.7,0.5,1.2,1.2,1.2v2.3c0,2.6-2.1,4.7-4.7,4.7c-2.6,0-4.7-2.1-4.7-4.7v-2.3c0.7,0,1.2-0.5,1.2-1.2
+      		c0-0.6-0.5-1.2-1.2-1.2h-2.3c-0.6,0-1.2,0.5-1.2,1.2C44.9,23.6,45.5,24.1,46.1,24.1z"/>
+      	<path fill="#D2181B" d="M22,70.1c0.2,0.2,0.5,0.3,0.8,0.3c0.3,0,0.6-0.1,0.8-0.3l3.6-3.6c1.2-1.2,1.7-2.8,1.6-4.4l1.3-1.2
+      		c1-1,2.4-1.5,3.8-1.5h15.5c2.8,0,5.4-1.1,7.4-3c0,0,0.1-0.1,0.1-0.1l10.5-12.6c1.7-2,1.4-4.9-0.6-6.6c-2-1.7-4.9-1.4-6.6,0.5
+      		l-1.1,1.2V15.7c0-0.6-0.5-1.2-1.2-1.2H27.7c-0.7,0-1.2,0.5-1.2,1.2V42c-4.5,1-8.2,3.8-10.1,7.9c-1.5-0.1-3,0.5-4.1,1.6l-3.6,3.6
+      		c-0.2,0.2-0.3,0.5-0.3,0.8c0,0.3,0.1,0.6,0.3,0.8L22,70.1z M56.7,16.9v24.2l-3.4,3.5c-0.9-1.1-2.2-1.7-3.7-1.7H36.1
+      		c-0.1,0-0.2,0-0.2-0.1c-1.8-0.7-3.8-1.1-5.8-1.1c-0.4,0-0.8,0-1.2,0V16.9H56.7z M27.9,44.2c2.4-0.3,4.8-0.1,7.1,0.8
+      		c0.4,0.1,0.7,0.2,1.1,0.2h13.6c1.3,0,2.4,1,2.4,2.3c0,1.3-1.1,2.3-2.4,2.3H39.5c-0.6,0-1.2,0.5-1.2,1.2c0,0.7,0.5,1.2,1.2,1.2h10.2
+      		c2.6,0,4.7-2.1,4.7-4.7c0-0.2,0-0.4,0-0.6c0.2-0.3,7.3-7.6,7.6-7.9c0,0,0,0,0.1-0.1c0.8-1,2.3-1.1,3.3-0.3c1,0.8,1.1,2.3,0.3,3.3
+      		L55.1,54.7c-1.5,1.5-3.6,2.3-5.7,2.3H33.9c-2,0-4,0.8-5.4,2.2L28,59.6c-0.2-0.3-0.4-0.6-0.7-0.9L20,51.5c-0.4-0.4-0.8-0.7-1.3-1
+      		C20.5,47.1,23.7,44.8,27.9,44.2z M14,53.2c1.2-1.2,3.2-1.2,4.4,0l7.2,7.2c1.2,1.2,1.2,3.2,0,4.4l-2.8,2.8L11.2,56L14,53.2z"/>
+      </g>
+
+      <g id="hands_icon">
+	<g>
+		<g>
+			<path fill="#D2181B" d="M64.9,59.1C64.9,59.1,64.9,59.1,64.9,59.1c-1.1-2.7-3.8-3.6-6.9-2.6l-8.5,2.4c-0.5-1.5-1.7-2.8-3.5-3.4
+				c0,0,0,0,0,0l-9.4-3.2c-0.8-1-3.2-3.6-7.8-3.6c-3.2,0-6,2.2-7.6,4.6H9.9c-0.7,0-1.2,0.5-1.2,1.2v15.4c0,0.7,0.5,1.2,1.2,1.2h7.3
+				c0.7,0,1.2-0.5,1.2-1.2v-1.1h3.4c0.7,0,1.2-0.5,1.2-1.2v-0.3c2,0.2,2.6,0.5,4.5,1.6c1.4,0.8,3.5,2,7.3,3.8c0,0,0,0,0.1,0
+				c0.7,0.3,2.2,0.7,3.9,0.7c1.2,0,2.6-0.2,4.1-0.9l18.8-6.7c0,0,0.1,0,0.1,0C63.6,64.9,66.3,62.6,64.9,59.1z M16,68.7h-4.8v-13H16
+				V68.7z M20.6,66.4h-2.2V55.7h2.2V66.4z M60.8,63.5L42,70.3c0,0,0,0-0.1,0c0,0,0,0-0.1,0c-2.6,1.2-5.1,0.5-6.1,0.1
+				c-3.7-1.7-5.7-2.8-7.1-3.6c-2-1.2-3-1.7-5.7-1.9V55c1.2-1.9,3.4-3.8,5.8-3.8c4.2,0,5.9,2.7,6,2.8c0.1,0.2,0.4,0.4,0.6,0.5
+				l9.7,3.3c1.6,0.6,2.4,1.9,2,3.2c-0.2,0.6-0.6,1.1-1.1,1.4c-0.6,0.3-1.2,0.4-1.8,0.2l-11-3.5C32.7,59,32,59.3,31.8,60
+				c-0.2,0.6,0.2,1.3,0.8,1.5l11,3.5c0,0,0,0,0,0c0.4,0.1,0.9,0.2,1.3,0.2c0.8,0,1.6-0.2,2.3-0.6c1.1-0.6,1.9-1.7,2.3-2.9
+				c0-0.1,0.1-0.2,0.1-0.3l9.2-2.5c1.3-0.5,3.1-0.6,3.8,1.2C63.5,62.1,61.4,63.3,60.8,63.5z"/>
+		</g>
+	</g>
+	<g>
+		<g>
+			<path fill="#D2181B" d="M70.1,14.9h-7.3c-0.7,0-1.2,0.5-1.2,1.2v1.1h-3.4c-0.7,0-1.2,0.5-1.2,1.2v0.4c-2-0.2-2.6-0.5-4.5-1.6
+				c-1.4-0.8-3.5-2-7.3-3.7c0,0,0,0-0.1,0c-1.2-0.5-4.5-1.5-8,0.1l-4.9,1.8L28,11.2c-0.5-0.5-1.3-0.5-1.7,0L12.7,24.8
+				c-0.4,0.4-0.5,1.2,0,1.7l23.3,23.3c0.4,0.4,1.2,0.5,1.7,0l12.4-12.4c0.3,0,0.7,0,1,0c3.2,0,6-2.2,7.6-4.6h11.3
+				c0.7,0,1.2-0.5,1.2-1.2V16.2C71.3,15.5,70.8,14.9,70.1,14.9z M27.2,13.8l2.8,2.8c-0.8,0.5-1.8,0.8-2.8,0.8c-1,0-2-0.3-2.8-0.8
+				L27.2,13.8z M18.1,28.4l-2.8-2.8l2.8-2.8c0.5,0.8,0.8,1.8,0.8,2.8C18.8,26.6,18.6,27.6,18.1,28.4z M36.8,47.2L34,44.4
+				c1.7-1.1,3.9-1.1,5.6,0L36.8,47.2z M41.4,42.6c-2.7-2-6.4-2-9.1,0L19.8,30.2c1-1.3,1.5-2.9,1.5-4.6c0-1.7-0.5-3.2-1.5-4.5
+				l2.8-2.8c1.3,1,2.9,1.5,4.6,1.5s3.2-0.5,4.6-1.5l2.6,2.6c-0.6,0.1-1.1,0.3-1.6,0.6c-0.9,0.5-1.6,1.2-2,2.1
+				c-1.4,0.3-2.7,0.9-3.7,1.9c-2.7,2.7-2.7,7.1,0,9.9c1.4,1.4,3.1,2,4.9,2c1.8,0,3.6-0.7,4.9-2c0.9-0.9,1.5-2,1.8-3.2l4.1,1.4
+				c-0.5,2.2,0,4.4,1.3,6.2L41.4,42.6z M33.9,30.6C33.9,30.6,33.9,30.6,33.9,30.6l2.5,0.8c-0.2,0.8-0.6,1.6-1.2,2.2
+				c-1.8,1.8-4.6,1.8-6.4,0c-1.8-1.8-1.8-4.6,0-6.4c0.4-0.4,0.9-0.8,1.5-1C30.5,28.2,31.8,29.8,33.9,30.6z M45.9,38.1
+				c-0.5-0.8-0.7-1.6-0.8-2.5c0.6,0.4,1.3,0.8,2.2,1.2L45.9,38.1z M57,31.1c-1.2,1.9-3.4,3.8-5.8,3.8c-0.5,0-0.9,0-1.3-0.1
+				c0,0,0,0,0,0c-2.6-0.4-4.1-1.9-4.5-2.5c0,0-0.1-0.2-0.1-0.2c-0.1-0.3-0.4-0.5-0.7-0.6l-9.7-3.3c-1.6-0.6-2.4-1.9-2-3.2h0
+				c0,0,0,0,0,0c0.2-0.6,0.6-1.1,1.1-1.4c0.6-0.3,1.2-0.4,1.8-0.2l11,3.5c0.6,0.2,1.3-0.2,1.5-0.8c0.2-0.6-0.2-1.3-0.8-1.5l-8.7-2.8
+				l-0.1-0.1c0,0,0,0,0,0l-4.5-4.5l3.9-1.4c0,0,0,0,0,0c0,0,0,0,0,0c0,0,0,0,0,0c2.6-1.2,5.1-0.5,6.1-0.1c3.7,1.7,5.7,2.8,7.1,3.6
+				c2,1.2,3,1.7,5.7,1.9V31.1z M61.6,30.4h-2.2V19.7h2.2V30.4z M68.9,30.4H64v-13h4.8V30.4z"/>
+		</g>
+	</g>
+</g>
       <g id="arrow_icon" fill="#FFFFFF">
         <path d="M18,24.4l9.7-9.7c0.8-0.8,0.8-2,0-2.8L18,2.2c-0.8-0.8-2-0.8-2.8,0c-0.8,0.8-0.8,2,0,2.8l6.4,6.4H2.9
   	c-1.1,0-1.9,0.9-1.9,1.9c0,1.1,0.9,1.9,1.9,1.9h18.7l-6.4,6.4c-0.4,0.4-0.6,0.9-0.6,1.4c0,0.5,0.2,1,0.6,1.4
@@ -153,8 +223,8 @@
       </div>
 
       <div class="bg-primary p-3 rounded-circle position-absolute c-menu-icon-wrp cursor-pointer d-block d-lg-none mt-3 justify-self-end mr-2" id="menu_responsive">
-        <p class="position-relative z-index200 outline-0-onfocus">
-          <span class="c-menu-icon bg-white d-block"></span>
+        <p class="position-relative z-index200 outline-0-onfocus cursor-pointer">
+          <span class="c-menu-icon bg-white d-block cursor-pointer"></span>
         </p>
       </div>
 
@@ -185,6 +255,7 @@
           </li>
         </ul>
       </nav>
+
     </header>
 
     <section class="s-home grid-wrp align-items-center h-100vh background-no-repeat-cover bg-dark-layer">
@@ -317,8 +388,8 @@
           <p class="text-primary text-center text-lg-left clearfix">
             <span class="d-inline-block">
               <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-    	 width="78.3px" height="79px" viewBox="0 0 78.3 79" enable-background="new 0 0 78.3 79" xml:space="preserve">
-                <use xlink:href="#car_icon"></use>
+	 width="78.3px" height="79px" viewBox="0 0 78.3 79" enable-background="new 0 0 78.3 79" xml:space="preserve">
+                <use xlink:href="#hands_icon"></use>
               </svg>
             </span>
 
@@ -339,8 +410,8 @@
           <p class="text-primary text-center text-lg-right text-xl-left clearfix">
             <span class="d-inline-block">
               <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-    	 width="78.3px" height="79px" viewBox="0 0 78.3 79" enable-background="new 0 0 78.3 79" xml:space="preserve">
-                <use xlink:href="#car_icon"></use>
+	 width="78.3px" height="79px" viewBox="0 0 78.3 79" enable-background="new 0 0 78.3 79" xml:space="preserve">
+                <use xlink:href="#price_icon"></use>
               </svg>
             </span>
 
@@ -361,8 +432,8 @@
           <p class="text-primary text-center text-lg-left clearfix">
             <span class="d-inline-block">
               <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-    	 width="78.3px" height="79px" viewBox="0 0 78.3 79" enable-background="new 0 0 78.3 79" xml:space="preserve">
-                <use xlink:href="#car_icon"></use>
+	 width="78.3px" height="79px" viewBox="0 0 78.3 79" enable-background="new 0 0 78.3 79" xml:space="preserve">
+                <use xlink:href="#car2_icon"></use>
               </svg>
             </span>
 
@@ -434,7 +505,7 @@ width="64.8px" height="54.8px" viewBox="0 0 64.8 54.8" enable-background="new 0 
             </svg>
 
             <div class="carousel slide border border-primary p-4 pl-5 pr-5 pt-5 rounded box-shadow" id="carousel_testimonial" data-interval="2500">
-              <ol class="carousel-indicators">
+              <ol class="carousel-indicators d-none">
                 <li data-target="#carousel_testimonial" data-slide-to="0" class="active ml-4 cursor-pointer"></li>
                 <li data-target="#carousel_testimonial" data-slide-to="1" class="ml-4 cursor-pointer"></li>
                 <li data-target="#carousel_testimonial" data-slide-to="2" class="ml-4 cursor-pointer"></li>
@@ -468,8 +539,20 @@ width="64.8px" height="54.8px" viewBox="0 0 64.8 54.8" enable-background="new 0 
               </div>
             </div>
 
+            <div class="d-flex justify-content-center w-100 ml-1 ml-md-4 ml-lg-5">
+              <a class="carousel-control-prev carousel-control--fix d-lg-none" href="#carousel_testimonial" role="button" data-slide="prev">
+               <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+               <span class="sr-only">Previous</span>
+             </a>
+
+             <a class="carousel-control-next carousel-control--fix d-lg-none" href="#carousel_testimonial" role="button" data-slide="next">
+               <span class="carousel-control-next-icon" aria-hidden="true"></span>
+               <span class="sr-only">Next</span>
+             </a>
+            </div>
+
             <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-	 width="62.7px" height="53px" viewBox="0 0 62.7 53" enable-background="new 0 0 62.7 53" xml:space="preserve" class="float-right quote-down">
+	 width="62.7px" height="53px" viewBox="0 0 62.7 53" enable-background="new 0 0 62.7 53" xml:space="preserve" class="float-right quote-down d-none d-sm-block">
 
               <use xlink:href="#quote_down"></use>
 
@@ -577,9 +660,9 @@ width="64.8px" height="54.8px" viewBox="0 0 64.8 54.8" enable-background="new 0 
 
 
 
-    <!-- <script src="js/jquery-3.2.1.js"></script>
-    <script src="bootstrap-4.0/assets/js/vendor/popper.min.js"></script>
-    <script src="bootstrap-4.0/dist/js/bootstrap.min.js"></script> -->
+    <!-- <script src="js/jquery-3.2.1.js"></script> -->
+    <!-- <script src="bootstrap-4.0/assets/js/vendor/popper.min.js"></script> -->
+    <!-- <script src="bootstrap-4.0/dist/js/bootstrap.min.js"></script> -->
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
