--- a/contact.html
+++ b/contact.html
@@ -11,6 +11,66 @@
   </head>
   <body>
 
+    <header class="container-fluid position-relative text-right w-100 grid-wrp z-index200">
+      <div class="bg-dark row d-none d-lg-flex">
+        <div class="col-3 mr-auto justify-content-start align-items-center grid-wrp">
+
+          <p class="text-white text-left mt-1">
+            <span class="icon icon-facebook border border-white p-2 ml-1"></span>
+
+            <span class="icon icon-google border border-white p-2 ml-1"></span>
+
+            <span class="icon icon-youtube border border-white p-2 ml-1"></span>
+
+            <span class="icon icon-twitter border border-white p-2 ml-1"></span>
+          </p>
+
+        </div>
+
+        <div class="col-lg-9 mr-auto mr-0 ml-lg-auto pt-3 text-left text-lg-right">
+          <a href="#" class="btn border border-primary mr-2 text-primary rounded-0 p-3 pt-4 pb-4 mb-3 d-none d-sm-inline-block">
+            Get directions
+          </a>
+
+          <a href="#" class="font-uppercase mr-3 p-3 pl-sm-4 pr-sm-4 text-white btn btn-primary rounded-0 mb-3 d-none d-sm-inline-block">
+            <span class="icon icon-phone"></span>
+
+            Call us
+            <span class="d-block">
+
+              305-637-4110
+            </span>
+          </a>
+        </div>
+      </div>
+
+      <div class="bg-primary p-3 rounded-circle c-menu-icon-wrp cursor-pointer d-block d-lg-none mt-3 justify-self-end mr-2" id="menu_responsive">
+        <p class="position-relative z-index200 outline-0-onfocus cursor-pointer">
+          <span class="c-menu-icon bg-white d-block cursor-pointer"></span>
+        </p>
+      </div>
+
+      <nav class="row navbar-nav bg-nav nav-menu-wrp nav-menu-wrp-show transition overflow-hidden" style="background-color: #CECCCC;">
+        <ul class="list-unstyled mt-5 mt-lg-2 clearfix">
+          <li class="text-center text-lg-left float-lg-left ml-3 mt-5 mt-lg-0">
+            <img src="img/logo.png" class="mw-100" alt="">
+          </li>
+
+          <li class="nav-item d-block d-lg-inline-block ml-lg-5 pt-2 text-center">
+            <a href="https://on-digital.github.io/kingof-trucks-redesign/" class="nav-link text-white">Home</a>
+          </li>
+
+          <li class="nav-item d-block d-lg-inline-block ml-lg-5 pt-2 text-center">
+            <a href="https://on-digital.github.io/kingof-trucks-redesign/truck-finder-pg.html" class="nav-link text-white">Truck finder</a>
+          </li>
+
+          <li class="nav-item d-block d-lg-inline-block ml-lg-5 mr-lg-4 pt-2 text-center">
+            <a href="https://on-digital.github.io/kingof-trucks-redesign/contact.html" class="nav-link text-white">Contact</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+
     <div class="container-fluid mt-5">
       <h1 class="text-center mb-5 page-title-pseudoline">Contact us</h1>
       <div class="row">
