--- a/index.html
+++ b/index.html
@@ -235,23 +235,15 @@
           </li>
 
           <li class="nav-item d-block d-lg-inline-block ml-lg-5 pt-2 text-center">
-            <a href="#" class="nav-link text-white">Item</a>
+            <a href="https://on-digital.github.io/kingof-trucks-redesign/" class="nav-link text-white">Home</a>
           </li>
 
           <li class="nav-item d-block d-lg-inline-block ml-lg-5 pt-2 text-center">
-            <a href="#" class="nav-link text-white">Item</a>
-          </li>
-
-          <li class="nav-item d-block d-lg-inline-block ml-lg-5 pt-2 text-center">
-            <a href="#" class="nav-link text-white">Item</a>
-          </li>
-
-          <li class="nav-item d-block d-lg-inline-block ml-lg-5 pt-2 text-center">
-            <a href="#" class="nav-link text-white">Item</a>
+            <a href="https://on-digital.github.io/kingof-trucks-redesign/truck-finder-pg.html" class="nav-link text-white">Truck finder</a>
           </li>
 
           <li class="nav-item d-block d-lg-inline-block ml-lg-5 mr-lg-4 pt-2 text-center">
-            <a href="#" class="nav-link text-white">Item</a>
+            <a href="https://on-digital.github.io/kingof-trucks-redesign/contact.html" class="nav-link text-white">Contact</a>
           </li>
         </ul>
       </nav>
